# tiu

./: README.md  TIU-Archive.md  TODO.md  build_update_image.sh  meson.build  tiu-apply  tiu-build.sh
conf/: 09_partAB  10_linux  tiu.conf  usr-AB.yaml  usr-btrfs.yaml
include/: dm.h  network.h  tiu-btrfs.h  tiu-errors.h  tiu-internal.h  tiu-mount.h  tiu-swupdate.h  tiu.h
lib/: apply_image.c  btrfs.c  casync_extract.c  casync_make.c  check_archive.c  create_images.c  desync_tar.c  desync_untar.c  extract_image.c  hwrevision.c  install.c  libtiu.map  mount.c  mount_archive.c  network.c  rm_rf.c  swupdate_client.c  tiu_download.c  tiu_errors.c  update.c  variables.c  verity_hash.c  workdir.c
src/: tiu.c
systemd/: 40-ca-certificates.preset  40-chrony.preset  40-jeos-firstboot.preset  40-snapper.preset  40-swupdate.preset  aaa_base.conf  audit.conf  ca-certificates.conf  chrony.conf  chronyd.conf  containers.conf  locale.conf  logrotate.conf  netcfg.conf  nm.conf  resolved.conf  systemd-journald.conf  vconsole.conf
tools/: create-grub-entry  finish  logging  populate-etc  setup-bootloader  setup-bootloader-sd-boot  setup-disk  setup-disk.py  setup-partlabel  setup-root  setup-usr-snapper  swupdate-postinstall  swupdate-preinstall  update-kernel
